未完待续的首页展示功能

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,31 +1,19 @@
 // bower:scss
 // endbower
+@import "flex";
+@import "flex-section";
+@import "flex-box";
+@import "flex-list";
+@import "flex-item";
+@import "flex-button";
 
 body {
-  background: #fafafa;
-  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  color: #333;
-}
-
-.hero-unit {
-  margin: 50px auto 0 auto;
-  width: 300px;
-  font-size: 18px;
-  font-weight: 200;
-  line-height: 30px;
-  background-color: #eee;
-  border-radius: 6px;
-  padding: 60px;
-  h1 {
-    font-size: 60px;
-    line-height: 1;
-    letter-spacing: -1px;
+  .flex-section {
+    border: 1px solid #0b97c4;
+    margin-bottom: 1rem;
+    .flex-box {
+      border: 1px solid #00d6b2;
+    }
   }
-}
 
-.browserupgrade {
-  margin: 0.2em 0;
-  background: #ccc;
-  color: #000;
-  padding: 0.2em 0;
 }
